--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Colors</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="box">
@@ -24,8 +24,8 @@
     </div>
       <div class="bottom-section" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px;">
         <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px;">To see the site as intended please download the following fonts.</p>
-        <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px;"><a href="fonts/lalegendedekorra.la-legende-de-korra.ttf" download="la-legende-de-korra"> la legende de korra</a></p>
-        <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px;"><a href="fonts/port-credit.regular.otf" download="port-credit"> port credit</a></p>
+        <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px;"><a href="lalegendedekorra.la-legende-de-korra.ttf" download="la-legende-de-korra"> la legende de korra</a></p>
+        <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px;"><a href="port-credit.regular.otf" download="port-credit"> port credit</a></p>
       </div>
   </body>
 </html>
